# luckay.la

./: .gitignore  LICENSE  README.md
src/: main.py  pyproject.toml
src/blueprints/: primary.py
src/html/: home.html
src/html/templates/primary/: construction.jinja  home.jinja  primary.json
src/static/css/: main.css
